[package]
name = "liburuz"
version = "0.1.0"
authors = ["Kenneth Koski"]
edition = "2018"

[dependencies]
async-std = "~1.5"
reqwest = { version = "0.10", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
zip = "0.5"
