[package]
name = "liburuz"
version = "0.1.0"
authors = ["Kenneth Koski"]
edition = "2018"

[dependencies]
async-std = "~1.5"
futures = "0.3"
k8s-openapi = { version = "0.8", features = ["v1_15"] }
kube = "0.35"
kube-derive = "0.35"
reqwest = { version = "0.10", default-features = false, features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
sled = "0.34"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
warp = "0.2"
zip = "0.5"

[dev-dependencies]
tempfile = "3"
