[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "runelib"
version = "0.1.0"
description = "..."
authors = [
    "..."
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "6"
flake8 = "3.8"
black = "20.8b1"
